--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -18,6 +18,8 @@ SQLAlchemy = "^1.4.41"
 uvicorn = "^0.22.0"
 python-dotenv = "^1.0.0"
 asyncpg = "^0.28.0"
+python-jose = "^3.3.0"
+passlib = "^1.7.4"
 
 
 [tool.poetry.group.test.dependencies]
