--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.98.0"
-pydantic = "^1.10.9"
+pydantic = {version = "^1.10.9", extras = ["email"]}
 alembic = "^1.11.1"
 sqlmodel = "^0.0.8"
 psycopg2-binary = "^2.9.6"
