feature: added more models - setup for full todo app as template: :

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.0",
     "@reduxjs/toolkit": "1.9.5",
     "@rtk-query/codegen-openapi": "^1.0.0",
     "next": "latest",
