--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -20,6 +20,7 @@ python-dotenv = "^1.0.0"
 asyncpg = "^0.28.0"
 python-jose = "^3.3.0"
 passlib = "^1.7.4"
+bcrypt = "^4.0.1"
 
 
 [tool.poetry.group.test.dependencies]
