--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -32,7 +32,13 @@ pytest = "^7.4.0"
 mypy = "^1.4.1"
 black = "^23.3.0"
 ruff = "^0.0.275"
+sqlalchemy-stubs = "^0.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+plugins = ["pydantic.mypy", "sqlmypy"]
+ignore_missing_imports = true
+disallow_untyped_defs = true
