--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "client-gen": "npx @rtk-query/codegen-openapi openapi-config.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
