--- a/backend/app/docker-compose.yml
+++ b/backend/app/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   db:
     container_name: template-db
     restart: always
-    image: postgres:13
+    image: postgres:latest
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
